# cloud-compliance-enforcement

./: .gitlab-ci.yml  Pipfile  README.rst  architecture.mmd  policy-modes.yaml  tox.ini
cpe-ci/: README.md  cpe.py  setup.cfg  setup.py  tox.ini  validate_policies.py
cpe-cmd/: .gitignore  README.md  README.rst  cpe.py  pyproject.toml  setup.cfg
docs/: .rstcheck.cfg  api.rst  architecture.mmd  architecture.rst  conf.py  cpe-cmd-readme.rst  index.rst  product-overview.md
docs/_static/css/: mermaid_arch_diag.css
modes/: periodic-4h.yaml
policies/: ami-unused-1m.yaml  asg-ami-90d.yaml  asg-invalid.yaml  asg-uncapacity.yaml  asg-unencrypted-ebs.yaml  asg-unused-launch-config.yaml  ebs-snapshots-1y.yaml  ebs-unattached.yaml  ec2-stopped-1y.yaml  rds-cluster-snapshots-1m.yaml  rds-snapshots-1m.yaml  rds-unused-14d.yaml
policy.modes/: periodic.yml
