[metadata]
name = cpe-cmd
author = Carlos Meza
author-email = carlos@digitalr00ts.com
description  = Cloud Custodian Enforcement
description-content-type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
;url =
;project_urls =
;    Bug Tracker =
;    Source Code =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
keywords =
    Cloud Custodian
    digitalr00ts

[options]
;include_package_data = True
install_requires =
    c7n @ git+https://github.com/cloud-custodian/cloud-custodian.git
;    c7n >= 0.9.0
;packages = find:
;package_dir =
;    = src
py_modules =
    cpe
requires-python = >=3.8
setup_requires =
    setuptools_scm
;zip_safe = False

;[options.packages.find]
;where = src

[options.entry_points]
console_scripts =
    cpe = cpe:main
